pom for tests